refactor: move Toggl API Base URL to Config class

--- a/conf/Config.php.sample
+++ b/conf/Config.php.sample
@@ -3,6 +3,11 @@
 class Config
 {
     /**
+     * @var string
+     */
+    public const TOGGL_BASE_URL = 'https://www.toggl.com/api/v8/';
+
+    /**
      * Toggl API Key
      *
      * @var string
