--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "squizlabs/php_codesniffer": "^3.2",
         "friendsofphp/php-cs-fixer": "^2.11",
         "phpmd/phpmd": "^2.6",
-        "phpstan/phpstan-shim": "^0.10"
+        "phpstan/phpstan-shim": "^0.10",
+        "phploc/phploc": "^5.0"
     },
     "autoload": {
         "psr-4": {
